# Vellum

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: Vellum_spec.md  execution-plan.md
scripts/: bump-version.ps1  dev-run.ps1  fetch-binaries.ps1  fetch-references.ps1  release-notes.ps1
src/: App.tsx  main.tsx  markdown-it-task-lists.d.ts  turndown-plugin-gfm.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: models.json
src-tauri/src/: applog.rs  commands.rs  config.rs  db.rs  grammar.rs  lib.rs  link.rs  notebook.rs  paths.rs  search.rs
src-tauri/src/process/: mod.rs  ollama.rs
src-tauri/src/refine/: hardware.rs  inference.rs  logbuf.rs  manifest.rs  mod.rs  models.rs  ndjson.rs  run.rs  runtime.rs  starters.rs
src/assets/icons/: ATTRIBUTION.txt
src/components/: AppContextMenus.tsx  ExportWizard.css  ExportWizard.tsx  ImportWizard.css  ImportWizard.tsx  MenuBar.css  MenuBar.tsx  Titlebar.css  Titlebar.tsx  UpdateNotice.css  UpdateNotice.tsx  VellumShell.css  VellumShell.tsx  dnd.ts  keyboard.ts  proofreadMenu.ts  useReorderDrag.ts  useWindowMaximized.ts
src/components/editor/: DynamicField.tsx  EditorContextMenu.css  EditorContextMenu.tsx  EditorToolbar.css  EditorToolbar.tsx  FindBar.css  FindBar.tsx  GrammarError.ts  GrammarPopover.css  GrammarPopover.tsx  LinkDialog.css  LinkDialog.tsx  MermaidDiagram.tsx  PageEditor.tsx  ProofingBadge.tsx  RefinePopover.css  RefinePopover.tsx  RefinePreviewModal.css  RefinePreviewModal.tsx  RefineSuggestion.ts  ResizableImage.tsx  SearchHighlight.ts  editor.css  extensions.ts  find.ts  grammar.ts  mergePaste.ts
src/components/panels/: AttachmentBar.css  AttachmentBar.tsx  EditorArea.css  EditorArea.tsx  NavPanel.css  NavPanel.tsx  PageList.css  PageList.tsx  RecycleBinModal.css  RecycleBinModal.tsx  SectionPropertiesModal.css  SectionPropertiesModal.tsx  SectionTabs.css  SectionTabs.tsx  sectionMenu.ts
src/components/search/: SearchBar.css  SearchBar.tsx
src/components/settings/: AboutSettings.tsx  EditorSettings.tsx  FirstRunModal.css  FirstRunModal.tsx  GeneralSettings.tsx  PageTemplatesManager.css  PageTemplatesManager.tsx  ProofingSettings.css  ProofingSettings.tsx  RefineDebugPanel.css  RefineDebugPanel.tsx  RefineSettings.css  RefineSettings.tsx  RefineTemplatesManager.css  RefineTemplatesManager.tsx  SettingsModal.css  SettingsModal.tsx  SettingsPanels.css
src/components/ui/: AdherenceControl.css  AdherenceControl.tsx  Button.css  Button.tsx  ContextMenu.css  ContextMenu.tsx  EditableLabel.tsx  ErrorBoundary.css  ErrorBoundary.tsx  Icon.tsx  Modal.css  Modal.tsx  ProgressBar.css  ProgressBar.tsx  Slider.css  Slider.tsx  Toggle.css  Toggle.tsx  Toolbar.css  Toolbar.tsx
src/data/: api.ts  events.ts  fonts.ts  palette.ts  types.ts  welcome-content.ts
src/lib/: clipboard.ts  debounce.ts  dynamic-fields.ts  export-markdown.ts  import-document.ts  print-page.ts  proofing.ts  refine-diff.ts  refine-markdown.ts  refine-resolve.ts
src/state/: activeEditor.tsx  updater.tsx  vellum.tsx
src/styles/: ATTRIBUTION.txt  app.css  base.css  tokens.css
