[package]
name = "vellum"
version = "0.1.0"
description = "A desktop note-taking application with a OneNote 2007-inspired UX"
authors = ["Luciano"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vellum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
# Same sqlx/libsqlite3-sys as tauri-plugin-sql — used by the backend for
# notebook DB creation and migrations; the frontend queries via plugin-sql.
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
harper-core = "2.5.0"
# Phase 7 (Refine infrastructure). All already resolved transitively at these
# versions in Cargo.lock, so adding them is additive and must NOT move `time`
# off 0.3.47 (re-pin with `cargo update time --precise 0.3.47` if it drifts).
#   - reqwest: rustls-tls (matches the in-tree rustls node; no native-tls/OpenSSL)
#   - zip: default features OFF — the default set pulls `time`; we only need deflate
tokio = { version = "1", features = ["rt", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = "0.3"
sha2 = "0.10"
zip = { version = "8", default-features = false, features = ["deflate"] }
sysinfo = { version = "0.36", default-features = false, features = ["system"] }

# DXGI hardware detection is Windows-only; never compiled on macOS/Linux CI.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

